--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -1,3 +1,33 @@
 .jumbotron {
-  background: blue !important;
+  background: white !important;
+}
+
+
+.box {
+  border: 1px red dotted;
+}
+
+
+.navbar-nav .nav-link {
+  padding: .25rem 0;
+  font-weight: 700;
+  background-color: transparent;
+  border-bottom: .25rem solid transparent;
+}
+
+.masthead-brand {
+  padding: .25rem 0;
+  font-weight: 700;
+  background-color: transparent;
+  border-bottom: .25rem solid transparent;
+
+}
+
+.navbar-nav .nav-link:hover,
+.navbar-nav .nav-link:focus {
+  border-bottom-color: black;
+}
+.main-container {
+  max-width: 1000px;
+  margin: auto;
 }
