--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -14,9 +14,11 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <div class="container">
+
+    <div class="main-container">
       <nav class="navbar navbar-expand-lg navbar-light ">
-        <a href="{% url 'home' %}" class="navbar-brand"> Traivan <span></span> </a>
+
+        <h5 class="masthead-brand"><a href="{% url 'home' %}">Traivan</a></h5>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -38,11 +40,13 @@
           </ul>
         </div>
       </nav>
-    </div><!--end container-->
+
 
 
     {% block content %}
     {% endblock %}
+
+    </div><!--end main-container-->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
