--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -16,8 +16,8 @@
   <body>
 
     <div class="main-container">
-      <nav class="navbar navbar-expand-lg navbar-light ">
 
+      <nav class="navbar navbar-expand-lg navbar-light ">
         <h5 class="masthead-brand"><a href="{% url 'home' %}">Traivan</a></h5>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -40,6 +40,18 @@
           </ul>
         </div>
       </nav>
+
+      <!--- header banner section-->
+      <section class="header_banner">
+        <div class="banner-text">
+          <h1>My name is Traivan.</h1>
+          <h2>I am Website Design!</h2>
+        </div>
+        <div class="banner-image">
+          <img src="{% static 'portfolio/banner_header.jpg'%}" alt="">
+        </div>
+      </section>
+
 
 
 
