--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -31,3 +31,17 @@
   max-width: 1000px;
   margin: auto;
 }
+/* ------------header_banner style----------*/
+.header_banner {
+  width: 100%;
+  height: 300px;
+  display: flex;
+
+}
+.header_banner h1 {color: red;}
+.banner_text {
+  flex: 1;
+}
+.banner_image {
+  flex: 1;
+}
