--- a/portfolio/static/portfolio/style.css
+++ b/portfolio/static/portfolio/style.css
@@ -1,3 +1,6 @@
+#Pages {
+  background-color: #ebebeb;
+}
 .jumbotron {
   background: white !important;
 }
@@ -7,7 +10,7 @@
   border: 1px red dotted;
 }
 
-
+/* -------------navbar style------------*/
 .navbar-nav .nav-link {
   padding: .25rem 0;
   font-weight: 700;
@@ -16,7 +19,11 @@
 }
 
 .masthead-brand {
-  padding: .25rem 0;
+  margin-left: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   font-weight: 700;
   background-color: transparent;
   border-bottom: .25rem solid transparent;
@@ -31,17 +38,8 @@
   max-width: 1000px;
   margin: auto;
 }
-/* ------------header_banner style----------*/
-.header_banner {
-  width: 100%;
-  height: 300px;
-  display: flex;
-
-}
-.header_banner h1 {color: red;}
-.banner_text {
-  flex: 1;
-}
-.banner_image {
-  flex: 1;
+/* ------------courses style----------*/
+.courses-text {
+  font-weight: 700;
+  border-bottom: .25rem black solid;
 }
