--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -17,7 +17,7 @@
 <div class=" alert alert-info text-dark ">
 
 
-    <div class="main-container">
+    <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light">
         <h5 class="masthead-brand"><a href="{% url 'home' %}">Traivan</a></h5>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
