--- a/static/portfolio/style.css
+++ b/static/portfolio/style.css
@@ -1,3 +1,45 @@
+#Pages {
+  background-color: #ebebeb;
+}
 .jumbotron {
-  background: blue !important;
+  background: white !important;
+}
+
+
+.box {
+  border: 1px red dotted;
+}
+
+/* -------------navbar style------------*/
+.navbar-nav .nav-link {
+  padding: .25rem 0;
+  font-weight: 700;
+  background-color: transparent;
+  border-bottom: .25rem solid transparent;
+}
+
+.masthead-brand {
+  margin-left: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  font-weight: 700;
+  background-color: transparent;
+  border-bottom: .25rem solid transparent;
+
+}
+
+.navbar-nav .nav-link:hover,
+.navbar-nav .nav-link:focus {
+  border-bottom-color: black;
+}
+.main-container {
+  max-width: 1000px;
+  margin: auto;
+}
+/* ------------courses style----------*/
+.courses-text {
+  font-weight: 700;
+  border-bottom: .25rem black solid;
 }
